--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,3 +57,8 @@ jobs:
 
       - name: run test
         run: bashcov -- bats -r --timing --tap --report-formatter junit tests
+
+      - uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/coverage.xml
+          fail_ci_if_error: true
