--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: run shellcheck
         uses: reviewdog/action-shellcheck@v1
         with:
-          github_token: ${{ secrets.github_token }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           reporter: github-pr-review
           path: "."
           pattern: |
@@ -60,5 +60,6 @@ jobs:
 
       - uses: codecov/codecov-action@v3
         with:
-          files: ./coverage/coverage.xml
-          fail_ci_if_error: true
+          directory: coverage
+          files: coverage.xml
+          verbose: true
