--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
           ruby-version: 2.7
 
       - name: Install Ruby dependencies
-        run: bundle update --bundler && bundle install
+        run: bundle install
 
       - name: Install dependencies
         run: |
