Update readme & add check help (#2)
* update readme
* check if show help

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,16 +24,20 @@ jobs:
       BATSLIB_TEMP_PRESERVE_ON_FAILURE: "0"
 
     steps:
+      - uses: actions/checkout@v3
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
 
+      - name: Install Ruby dependencies
+        run: bundle install
+
       - name: Install dependencies
         run: |
           mkdir -p "$HOME/.local"
           npm install --prefix "$HOME/.local" bats bats-support bats-assert
-          gem install bashcov:'< 2' simplecov-cobertura:'< 2'
           curl -fsSL https://github.com/mozilla/sops/releases/download/v${{ env.SOPS_VERSION }}/sops-v${SOPS_VERSION}.linux -o /usr/local/bin/sops
           chmod +x /usr/local/bin/sops
           curl -fsSL https://github.com/helmfile/vals/releases/download/v${{ env.VALS_VERSION }}/vals_${VALS_VERSION}_linux_amd64.tar.gz | tar xzf - -C /usr/local/bin/ vals
@@ -43,8 +47,6 @@ jobs:
           echo "$HOME/.local/node_modules/bats/bin" >> "$GITHUB_PATH"
           echo "BATS_LIB_PATH=$HOME/.local/node_modules" >> "$GITHUB_ENV"
           echo "SOPS_AGE_KEY_FILE=$PWD/tests/age/key.txt" >> "$GITHUB_ENV"
-
-      - uses: actions/checkout@v3
 
       - name: run test
         run: bashcov -- bats -r --timing --tap --report-formatter junit tests
